--- a/index.html
+++ b/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лучшие велосипеды</title>
+    <title>Реализовать макет по примеру</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="mainblock">
-        <h1>
-            Лучшие велосипеды в городе
-        </h1>
-    </div>
-    <div class="block">
-        <p>
-            Современный образ жизни — это сочетание движения и здоровья, радости и открытий. Велосипед — прекрасный
-            способ почувствовать себя вечно молодым, активным и покоряющим новые горизонты.
-        </p>
-    </div>
-    <div class="block">
-        <p>Продажа велосипедов интернет-магазином «Велопарк» — это гарантия низких цен и удобной схемы доставки, изделия
-            известных фирм от ведущих спортивных дизайнеров.</p>
-    </div>
-    <div class="block">
-        <p>
-            Мы продаём товары, которые станут вашими лучшими друзьями! У нас вы можете приобрести горный велосипед для
-            себя, детский для своего ребёнка и другие типы.
-        </p>
+    <div class="container">
+        <div class="square red"></div>
+        <div class="square green"></div>
+        <div class="square blue"></div>
     </div>
 </body>
-
 </html>
