add first files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="square red"></div>
-        <div class="square green"></div>
-        <div class="square blue"></div>
-    </div>
+    <script>
+
+let numbers = [12, 15, 11, 9, 3, 21, 44];
+for (let i = 0; i < numbers.length; i++) {
+    if (i % 3 === 0) { 
+        console.log(numbers[i]);
+    }
+}
+
+let priceTicket
+
+     </script>
+    
 </body>
 </html>
