--- a/index.html
+++ b/index.html
@@ -7,18 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script>
-
-let numbers = [12, 15, 11, 9, 3, 21, 44];
-for (let i = 0; i < numbers.length; i++) {
-    if (i % 3 === 0) { 
-        console.log(numbers[i]);
-    }
-}
-
-let priceTicket
-
-     </script>
-    
+    <script src="script.js" defer></script>
 </body>
 </html>
