--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>макет</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Товары</title>
+    <style>
+        .product {
+            border: 1px solid #ccc;
+            padding: 20px;
+            margin: 10px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 200px;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <script src="main.js" defer></script>
+    <div id="root"></div>
+    <script src="main.js"></script>
 </body>
 </html>
